--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 /*
-Gem Incremental - v1.2.2
+Gem Incremental - v1.3.0
 Author: Mathias Tichota
 Licensed under the MIT License 
 */
@@ -112,7 +112,9 @@ html, body {
 #buy-upgrade,
 #buy-miner,
 #buy-bomb,
-#buy-dynamite {
+#buy-dynamite,
+#buy-robot,
+#buy-rocket {
   font-size: 1.5rem;
   padding: 10px 25px;
   cursor: pointer;
@@ -127,7 +129,9 @@ html, body {
 #buy-upgrade:active,
 #buy-miner:active,
 #buy-bomb:active,
-#buy-dynamite:active
+#buy-dynamite:active,
+#buy-robot:active,
+#buy-rocket:active
 {
   box-shadow: 0 2px #008fa0, 0 3px 6px rgba(0, 0, 0, 0.2);
   transform: translateY(2px);
