--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ html, body {
     0 4px 6px rgba(0, 143, 160, 0.4),
     0 6px 10px rgba(160, 240, 251, 0.3);
   border-radius: 10px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #middle-section {
