--- a/main.css
+++ b/main.css
@@ -124,7 +124,8 @@ html, body {
 #buy-bomb,
 #buy-dynamite,
 #buy-robot,
-#buy-rocket {
+#buy-rocket,
+#buy-rebirth {
   font-size: 1.5rem;
   padding: 10px 25px;
   cursor: pointer;
@@ -141,7 +142,8 @@ html, body {
 #buy-bomb:active,
 #buy-dynamite:active,
 #buy-robot:active,
-#buy-rocket:active {
+#buy-rocket:active,
+#buy-rebirth:active {
   box-shadow: 0 2px #008fa0, 0 3px 6px rgba(0, 0, 0, 0.2);
   transform: translateY(2px);
 }
